--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -36,9 +36,11 @@ add_executable(goalc-test
         ${GOALC_TEST_FRAMEWORK_SOURCES}
         ${GOALC_TEST_CASES}
         )
-
-target_link_libraries(goalc-test common runtime compiler gtest decomp Zydis libzstd_static tree-sitter)
-
+        target_link_libraries(goalc-test PRIVATE
+        ${CMAKE_SOURCE_DIR}/third-party/libsm64/lib/libsm64.lib
+        common runtime compiler gtest decomp Zydis libzstd_static tree-sitter
+    )
+    
 add_executable(test_image_resize ${CMAKE_CURRENT_LIST_DIR}/common/test_image_resize.cpp)
 target_link_libraries(test_image_resize common)
 
